# csi-dmc-data-scraper-228

./: README.md
apify-actor-call-script/: .env.template
apify-actor-call-script/src/: __main__.py  scraper.py
apify-csi-dmc-scraper/: .gitignore  Dockerfile  README.md  csi-dmc_scrapy_output.json
apify-csi-dmc-scraper/actor-call-script/: README.md  pyproject.toml
apify-csi-dmc-scraper/actor-call-script/output/: csi-dmc_scrapy_output.json
apify-csi-dmc-scraper/apify-actor/: Dockerfile  pyproject.toml
apify-csi-dmc-scraper/apify-actor/.actor/: actor.json  input_schema.json
apify-csi-dmc-scraper/apify-actor/src/: __main__.py  items.py  pipelines.py
apify-csi-dmc-scraper/apify-actor/src/spiders/: csi_spider.py
apify-csi-dmc-scraper/apify-actor/storage/datasets/default/: 000000004.json  000000005.json  000000006.json  000000007.json  000000009.json  000000012.json  000000017.json  000000018.json  000000019.json  000000020.json  000000021.json  000000027.json  000000028.json  000000029.json  000000030.json  000000034.json
apify-csi-dmc-scraper/src/: main.py  settings.py
apify-csi-dmc-scraper/storage/datasets/default/: 000000001.json  000000002.json  000000003.json  000000008.json  000000010.json  000000011.json  (+13 more)
apify-csi-dmc-scraper/tests/: test_csi_spider.py
local-csi-dmc-scraper/: .gitignore  Dockerfile  README.md  csi-dmc_scrapy_output.json  pyproject.toml  scrapy.cfg
local-csi-dmc-scraper/csi_dmc/: middlewares.py  pipelines.py  settings.py
local-csi-dmc-scraper/csi_dmc/spiders/: csi_spider.py
local-csi-dmc-scraper/tests/: test_csi_spider.py
(+1 files in other folders)
