[tool.poetry]
name = "apify-scrappy-develop"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apify = "^1.1.4"
nest-asyncio = "^1.5.8"
scrapy = "^2.11.0"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
